graphite: use both virt0/virt1000 for AuthLDAPURL
virt1000 seems to be down atm, so authentication fails and 500s are
being thrown. We should use both, as this is the only way we provide
redundancy so far.

Change-Id: Id461df5c32e6959e781324b1f713b6b2ef4f0100

--- a/templates/graphite/graphite.apache.erb
+++ b/templates/graphite/graphite.apache.erb
@@ -14,7 +14,7 @@
         AuthBasicProvider ldap
         AuthLDAPBindDN cn=proxyagent,ou=profile,dc=wikimedia,dc=org
         AuthLDAPBindPassword <%= scope.lookupvar('::passwords::ldap::production::proxypass') %>
-        AuthLDAPURL ldaps://virt1000.wikimedia.org/ou=people,dc=wikimedia,dc=org?cn
+        AuthLDAPURL "ldaps://virt0.wikimedia.org virt1000.wikimedia.org/ou=people,dc=wikimedia,dc=org?cn"
         Require ldap-group cn=wmf,ou=groups,dc=wikimedia,dc=org
 
         # uWSGI reverse-proxy
