graphite-web: Specify instance names in CARBONLINK_HOSTS
Corrects Id83efec88.

Change-Id: Id4180b5b9d772e70fa97f2117ad717945911fd7a

--- a/modules/graphite/templates/local_settings.py.erb
+++ b/modules/graphite/templates/local_settings.py.erb
@@ -49,9 +49,9 @@ DATABASES = {
 <%- carbon_settings = scope.lookupvar('::graphite::carbon_settings'); if carbon_settings.key? 'relay' -%>
 CARBONLINK_HOSTS = [<%=
     carbon_settings['relay']['destinations'].map { |dest|
-        host, pickle_receiver_port, name = dest.split(':')
-        cache_query_port = carbon_settings["cache:#{name}"]['cache_query_port']
-        "\"#{host}:#{cache_query_port}\""
+        server, pickle_receiver_port, instance = dest.split(':')
+        cache_query_port = carbon_settings["cache:#{instance}"]['cache_query_port']
+        "\"#{server}:#{cache_query_port}:#{instance}\""
     }.join(', ')
 %>]
 <%- end -%>
