Add Frank Schulenburg's blog to the English Planet
Requested at https://meta.wikimedia.org/w/index.php?oldid=6949614

Change-Id: I5df5562eeb66eb6c12352433cfe0cc6c5a910102

--- a/templates/planet/en_config.erb
+++ b/templates/planet/en_config.erb
@@ -557,3 +557,6 @@ name=Wikistaycation
 
 [http://mariapacana.tumblr.com/tagged/parsoid/rss]
 name=Maria Pacana
+
+[http://www.wikiphotographer.net/category/wikimedia-commons/feed/]
+name=Frank Schulenburg
