increase max message size for spam scanning on OTRS server
Change-Id: I4feb62d56b51e320714cdbf7ec112faba476a8f5

--- a/templates/exim/exim4.conf.SMTP_IMAP_MM.erb
+++ b/templates/exim/exim4.conf.SMTP_IMAP_MM.erb
@@ -281,8 +281,8 @@ acl_check_data:
 	accept hosts = +relay_from_hosts
 		set acl_m0 = trusted relay
 
-	# skip if message is too large (>500K)
-	accept condition = ${if >{$message_size}{500K}}
+	# skip if message is too large (>4M)
+	accept condition = ${if >{$message_size}{4M}}
 		set acl_m0 = n/a
 		set acl_m1 = skipped, message too large
 
