zuul: support for zuul.zuul_url
Upstream has introduced a new mandatory configuration parameter
'zuul_url'. It specifies the URL of the repositories maintained by Zuul
and from which workers should fetch from.

Change-Id: Id1cce4ea87e2b01be12904d328f4bfbf3cb1df04

--- a/modules/zuul/templates/zuul.conf.erb
+++ b/modules/zuul/templates/zuul.conf.erb
@@ -24,3 +24,4 @@ git_dir=<%= @git_dir %>
 push_change_refs=<%= @push_change_refs %>
 url_pattern=<%= @url_pattern %>
 status_url=<%= @status_url %>
+zuul_url=<%= @zuul_url %>
