varnish: adds gallium to misc-varnish
gallium serves HTTP and HTTPS on its public IP for the following
domains:

 integration.mediawiki.org
 docs.mediawiki.org

 integration.wikimedia.org
 docs.wikimedia.org

The mediawiki.org entries should be moved to the production cluster
and Apache should handle redirects.

The wikimedia.org entries can be served by the misc varnish which
should relay them internally to gallium.  Note that Apache on gallium
has some local proxy setup for Zuul and Jenkins (to port 8001 and 8080).

Apache conf: https://gerrit.wikimedia.org/r/#/c/106313/

RT #6593
RT #6594

Change-Id: I4d00cce7d27657c06023bc5f3b222908d9399e9c

--- a/templates/varnish/misc.inc.vcl.erb
+++ b/templates/varnish/misc.inc.vcl.erb
@@ -6,6 +6,8 @@ sub vcl_recv {
 		/* gitblit requires the following request headers: */
 		set req.http.X-Forwarded-Proto = "https";
 		set req.http.X-Forwarded-Port = "443";
+	} elsif (req.http.Host == "doc.wikimedia.org" || req.http.Host == "integration.wikimedia.org") {
+		set req.backend = gallium;
 	} elsif (req.http.Host == "gerrit.wikimedia.org") {
 		set req.backend = ytterbium;
 	} elsif (req.http.Host == "gdash.wikimedia.org" || req.http.Host == "graphite.wikimedia.org") {
