--- a/templates/rt/rt4.apache.erb
+++ b/templates/rt/rt4.apache.erb
@@ -17,8 +17,8 @@
   SSLProtocol -ALL +SSLv3 +TLSv1
   SSLCipherSuite AES128-GCM-SHA256:RC4-SHA:RC4-MD5:DES-CBC3-SHA:AES128-SHA:AES256-SHA
   SSLHonorCipherOrder on
-  SSLCertificateFile /etc/ssl/certs/star.wikimedia.org.pem
-  SSLCertificateKeyFile /etc/ssl/private/star.wikimedia.org.key
+  SSLCertificateFile /etc/ssl/certs/rt.wikimedia.org.pem
+  SSLCertificateKeyFile /etc/ssl/private/rt.wikimedia.org.key
 
   AddDefaultCharset UTF-8
 
