--- a/modules/nrpe/templates/nrpe_local.cfg.erb
+++ b/modules/nrpe/templates/nrpe_local.cfg.erb
@@ -17,6 +17,7 @@ command[check_jenkins]=/usr/lib/nagios/plugins/check_procs -w 1:1 -c 1:1 --ereg-
 # Zuul has a main process and a fork which is the gearman server. Thus we need
 # two process running.
 command[check_zuul]=/usr/lib/nagios/plugins/check_procs -w 2:2 -c 2:2 --ereg-argument-array '^/usr/bin/python /usr/local/bin/zuul-server'
+command[check_gearman]=/usr/lib/nagios/plugins/check_tcp -H 127.0.0.1 -p 4730 --timeout=2
 command[check_mailman]=/usr/lib/nagios/plugins/check_procs -w 1:25 -c 1:35 -a mailman
 command[check_spamd]=/usr/lib/nagios/plugins/check_procs -w 1:20 -c 1:40 -a spamd
 command[check_poolcounterd]=/usr/lib/nagios/plugins/check_procs -w 1:1 -c 1:3 -C poolcounterd
