comment duplicate use of NameVirtualHost
on Debian/Ubuntu *:80 is already in ports.conf
by default. *:443 may be missing but we puppetized
that to be added

if we use it again in site configs it just leads to ugly
warnings like:

[warn] NameVirtualHost *:443 has no VirtualHosts
[warn] NameVirtualHost *:80 has no VirtualHosts

fix that, but leave comment if somebody needs them when reusing this

Change-Id: Ie852b0714ffaee7ca63eadf13a3b6b246e0a3c60

--- a/modules/bugzilla/templates/apache/bugzilla.wikimedia.org.erb
+++ b/modules/bugzilla/templates/apache/bugzilla.wikimedia.org.erb
@@ -2,8 +2,11 @@
 # ! THIS FILE IS MANAGED BY PUPPET !
 # ./modules/bugzilla/templates/apache/bugzilla.wikimedia.org.erb
 
-NameVirtualHost *:80
-NameVirtualHost *:443
+# you should already have these in ports.conf
+# on Debian *:443 might be missing there but we puppetize that
+# if you need them, uncomment the next 2 lines
+# NameVirtualHost *:80
+# NameVirtualHost *:443
 
 <VirtualHost *:80>
 	ServerAdmin webmaster@wikimedia.org
