--- a/modules/contint/templates/apache/integration.wikimedia.org.erb
+++ b/modules/contint/templates/apache/integration.wikimedia.org.erb
@@ -12,8 +12,9 @@ NameVirtualHost *:443
 	ErrorLog /var/log/apache2/integration_error.log
 	CustomLog /var/log/apache2/integration_access.log vhost_combined
 
-	# Force any request to HTTPS
-	RedirectMatch permanent ^/(.*) https://integration.wikimedia.org/$1
+	# Force any request to HTTPS if not passed via https (misc web varnish)
+	RewriteCond %{HTTP:X-Forwarded-Proto} !https
+	RewriteRule (.) https://integration.wikimedia.org%{REQUEST_URI} [R=301]
 
 </VirtualHost>
 
