--- a/modules/contint/templates/apache/integration.wikimedia.org.erb
+++ b/modules/contint/templates/apache/integration.wikimedia.org.erb
@@ -13,6 +13,7 @@ NameVirtualHost *:443
 	CustomLog /var/log/apache2/integration_access.log vhost_combined
 
 	# Force any request to HTTPS if not passed via https (misc web varnish)
+	RewriteEngine On
 	RewriteCond %{HTTP:X-Forwarded-Proto} !https
 	RewriteRule (.) https://integration.wikimedia.org%{REQUEST_URI} [R=301]
 
