gdash: fix code deploy colors for white background
White on white doesn't work so well, and grey on white doesn't work
either. Switch scaps to black and sync-common-file to dashed gold
instead to match the continuous gold for sync-common-all.

It remains to be seen whether gold is a good color for displaying on a
white background.

Change-Id: I3833f390598342dd3d8f82878f25227395ffdb86

--- a/templates/gdash/deploy_addon.erb
+++ b/templates/gdash/deploy_addon.erb
@@ -6,13 +6,13 @@
   [
 
     # sync-common-file
-    'alias(color(dashed(drawAsInfinite(deploy.sync-common-file)),"c0c0c080"),"sync-common-file")',
+    'alias(color(dashed(drawAsInfinite(deploy.sync-common-file)),"gold"),"sync-common-file")',
 
     # sync-common-all
     'alias(color(lineWidth(drawAsInfinite(deploy.sync-common-all),2),"gold"),"sync-common-all")',
 
     # scap
-    'alias(color(lineWidth(drawAsInfinite(deploy.scap),2),"white"),"scap deploy")',
+    'alias(color(lineWidth(drawAsInfinite(deploy.scap),2),"black"),"scap deploy")',
 
   ].join('&')
 %>
