Swift: make temp URLs actually work
Temp URLs never worked for private containers, fix this.

Change-Id: I0eabd7b54fc79819f3b16ba459fc2291b6559639

--- a/templates/swift/proxy-server.conf.erb
+++ b/templates/swift/proxy-server.conf.erb
@@ -13,9 +13,9 @@ log_statsd_metric_prefix = <%= @statsd_metric_prefix %>
 
 [pipeline:main]
 <% if @auth_backend == 'swauth' -%>
-pipeline = rewrite healthcheck cache swauth cors proxy-logging proxy-server
+pipeline = rewrite healthcheck cache tempurl swauth cors proxy-logging proxy-server
 <% elsif @auth_backend == 'tempauth' -%>
-pipeline = rewrite healthcheck cache tempauth cors proxy-logging proxy-server
+pipeline = rewrite healthcheck cache tempurl tempauth cors proxy-logging proxy-server
 <% end -%>
 
 [app:proxy-server]
