Added a [filter:tempurl] section to the swift proxy
* We do not need to allow PUT request temp URLs

Change-Id: Id5783851ac46e6a9f393da2187841750375e52a1

--- a/templates/swift/proxy-server.conf.erb
+++ b/templates/swift/proxy-server.conf.erb
@@ -75,3 +75,6 @@ backend_url_format = <%= @backend_url_format %>
 
 paste.filter_factory = wmf.rewrite:filter_factory
 
+[filter:tempurl]
+# Default includes PUT, which is a bit scary and not useful for wmf
+methods = GET HEAD
