swift: don't allow PUT for temp URLs
Change-Id: Id5783851ac46e6a9f393da2187841750375e52a1

--- a/templates/swift/proxy-server.conf.erb
+++ b/templates/swift/proxy-server.conf.erb
@@ -26,6 +26,11 @@ allow_account_management = true
 account_autocreate = true
 <% end -%>
 
+[filter:tempurl]
+use = egg:swift#tempurl
+# default includes PUT
+methods = GET HEAD
+
 <% if @auth_backend == 'swauth' -%>
 [filter:swauth]
 use = egg:swauth#swauth
@@ -74,4 +79,3 @@ backend_url_format = <%= @backend_url_format %>
 
 
 paste.filter_factory = wmf.rewrite:filter_factory
-
