Add SSLCACertificatePath for rt & magnesium
SSL certificate verification doesn't work right without them, and
rt-mailgate especially breaks.

Change-Id: I454ce18dcfcbdc00fec615c638b359ef9c82b637

--- a/templates/apache/sites/racktables.wikimedia.org.erb
+++ b/templates/apache/sites/racktables.wikimedia.org.erb
@@ -23,6 +23,7 @@
 	SSLHonorCipherOrder on
 	SSLCertificateFile <%= racktables_ssl_cert %>
 	SSLCertificateKeyFile <%= racktables_ssl_key %>
+	SSLCACertificatePath /etc/ssl/certs
 
 	DocumentRoot /srv/org/wikimedia/racktables/wwwroot
         <Directory />
