--- a/templates/rt/rt4.apache.erb
+++ b/templates/rt/rt4.apache.erb
@@ -19,6 +19,7 @@
   SSLHonorCipherOrder on
   SSLCertificateFile /etc/ssl/certs/rt.wikimedia.org.pem
   SSLCertificateKeyFile /etc/ssl/private/rt.wikimedia.org.key
+  SSLCACertificatePath /etc/ssl/certs
 
   AddDefaultCharset UTF-8
 
