webserver::apache: misc SSL fixes
- Set ServerAdmin correct on the 443 virtualhost
- Support "redirected"; it was previously a stub
- Add SSLCACertificatePath
- Remove the defaulting to wildcard certificate support

Change-Id: I0c545ad3a7dab2d569ac52b75b63740c9dcb37cd

--- a/templates/apache/generic_vhost.erb
+++ b/templates/apache/generic_vhost.erb
@@ -1,6 +1,6 @@
 # This file is managed by Puppet!
 
-<% if ssl != "only" -%>
+<% if ["true", "false"].include?(ssl) -%>
 <VirtualHost *:80>
 	ServerName <%= title %>
 <% if aliases.length > 0 -%>
@@ -34,13 +34,25 @@
 </VirtualHost>
 <% end -%>
 
+<% if ssl == "redirected" -%>
+<VirtualHost *:80>
+	ServerName <%= title %>
+<% if aliases.length > 0 -%>
+	ServerAlias <%= aliases.join(" ") %>
+<% end -%>
+	ServerAdmin <%= server_admin %>
+
+	Redirect permanent / https://<%= title %>/
+</VirtualHost>
+<% else %>
+
 <% if ["true", "only", "redirected"].include?(ssl) -%>
 <VirtualHost *:443>
 	ServerName <%= title %>
 <% if aliases.length > 0 -%>
 	ServerAlias <%= aliases.join(" ") %>
 <% end -%>
-	ServerAdmin root@wikimedia.org
+	ServerAdmin <%= server_admin %>
 
 	SSLEngine on
 	SSLProtocol -ALL +SSLv3 +TLSv1
@@ -48,6 +60,7 @@
 	SSLHonorCipherOrder on
 	SSLCertificateFile <%= certfile %>
 	SSLCertificateKeyFile <%= certkey %>
+	SSLCACertificatePath /etc/ssl/certs
 
 	DocumentRoot <%= docroot %>
 	<Directory <%= docroot %>>
