webserver: remove broken docroot logic
The current webserver::apache::site logic is broken, as it tried to
reassign to the $docroot variable and this is, unfortunately, disallowed
in puppet.

As it's clearly not a used functionality, and since Apache throws
warnings if a directory doesn't exist, remove the whole piece of code
and let vhosts that e.g. don't need a document root (because, for
example, contain just a simple redirect) to work with a simpler config.

Debian defaults to /var/www in this case, and policy dictates that no
packages will ever write useful files there.

Change-Id: I64ee6d8939b8ca56abd21bad7c76c9684cc54812

--- a/templates/apache/generic_vhost.erb
+++ b/templates/apache/generic_vhost.erb
@@ -8,6 +8,7 @@
 <% end -%>
 	ServerAdmin <%= server_admin %>
 
+<% if docroot -%>
 	DocumentRoot <%= docroot %>
 	<Directory <%= docroot %>>
 		Options Indexes FollowSymLinks MultiViews
@@ -15,6 +16,8 @@
 		Order allow,deny
 		allow from all
 	</Directory>
+<% end -%>
+
 
 	ErrorLog <%= error_log %>
 	# Possible values include: debug, info, notice, warn, error, crit,
@@ -62,6 +65,7 @@
 	SSLCertificateKeyFile <%= certkey %>
 	SSLCACertificatePath /etc/ssl/certs
 
+<% if docroot -%>
 	DocumentRoot <%= docroot %>
 	<Directory <%= docroot %>>
 		Options Indexes FollowSymLinks MultiViews
@@ -69,6 +73,7 @@
 		Order allow,deny
 		allow from all
 	</Directory>
+<% end -%>
 
 	ErrorLog <%= error_log %>
 	# Possible values include: debug, info, notice, warn, error, crit,
