librenms: another round of misc fixes
- Add a project name, title & logo
- Switch RRD storage to /srv/, as there's plenty of (LVM) space there.
- Enable mod_rewrite, since it's used by .htaccess
- Switch docroot to /html, as originally intended.
- Change Nagios check to mention "LibreNMS HTTP" in the description, to
  make clear which service is broken.
- Remove now virtual php5-json; add php-net-ipv4/6
- Fix a typo in one of the crontabs
- Fix config.php to not override LibreNMS' default settings

Change-Id: I80170aa558ff4d132c99582f4106731d980aae29

--- a/modules/librenms/templates/config.php.erb
+++ b/modules/librenms/templates/config.php.erb
@@ -1,6 +1,8 @@
 <?php
 # This file is managed by Puppet!
 
-$config = <%= scope.function_phpdump(@config) %>;
+$puppet_config = <%= scope.function_phpdump(@config) %>;
+
+$config = array_merge($config, $puppet_config);
 
 ?>
