--- a/templates/apache/sites/git.wikimedia.org.erb
+++ b/templates/apache/sites/git.wikimedia.org.erb
@@ -50,6 +50,7 @@ NameVirtualHost *:443
 	SSLCertificateFile /etc/ssl/certs/<%= ssl_cert %>.pem
 	SSLCertificateChainFile /etc/ssl/certs/<%= ssl_cert %>.chained.pem
 	SSLCertificateKeyFile /etc/ssl/private/<%= ssl_cert_key %>.key
+	SSLCACertificatePath /etc/ssl/certs/
 
 	RequestHeader set X-Forwarded-Proto https
 	RequestHeader set X-Forwarded-Port 443
