webserver: fix AllowOverride for SSL too
Commit I17e66c8 added AllowOverride All to the vhost template, but
didn't do so for the 443 virtual host. One-word fix.

Change-Id: I29baab27f7b9c0f85a6d05ca8a9befe3b30be265

--- a/templates/apache/generic_vhost.erb
+++ b/templates/apache/generic_vhost.erb
@@ -69,7 +69,7 @@
 	DocumentRoot <%= docroot %>
 	<Directory <%= docroot %>>
 		Options Indexes FollowSymLinks MultiViews
-		AllowOverride None
+		AllowOverride All
 		Order allow,deny
 		allow from all
 	</Directory>
