librenms: make main class' "config" option simpler
Supplying install_dir, html_dir, rrd_dir & log file to the config hash
is kind of wrong, as it's not KISS: the class already knows the best
position for these and sets up other stuff based on these locations
(e.g. logrotate). Pass them to the config.php template instead, outside
of the config hash and simplify the caller.

Change-Id: I6620ff7bb206d8fee4fb18607930195382611ec9

--- a/modules/librenms/templates/config.php.erb
+++ b/modules/librenms/templates/config.php.erb
@@ -1,5 +1,11 @@
 <?php
-# This file is managed by Puppet!
+
+# This file is managed by Puppet, do not modify manually.
+
+$config['install_dir'] = "<%= @install_dir %>";
+$config['html_dir']    = "<%= @install_dir %>/html";
+$config['rrd_dir']     = "<%= @rrd_dir %>";
+$config['log_file']    = "/var/log/librenms.log";
 
 $puppet_config = <%= scope.function_phpdump(@config) %>;
 
