[Planet] Add Virginia Gentilini to Italian Planet
Well-known Italian wikimedian and librarian with highly followed
blog (also got reposted by WMF blog).

Change-Id: Ia036343cf24356083ab6706431949a496ea82742

--- a/templates/planet/it_config.erb
+++ b/templates/planet/it_config.erb
@@ -80,3 +80,6 @@ name=Wiki Loves Monuments
 
 [http://voices.telecomitaliahub.it/tag/wikipedia/feed]
 name=Voices Telecom Italia
+
+[https://nonbibliofili.wordpress.com/tag/wikimedia/feed/]
+name=Virginia Gentilini
