--- a/modules/hhvm/templates/initscripts/hhvm.systemd_override.erb
+++ b/modules/hhvm/templates/initscripts/hhvm.systemd_override.erb
@@ -6,6 +6,10 @@ Environment=RUN_AS_USER=www-data
 <%- if !scope['hhvm::malloc_arenas'].nil? && scope['hhvm::malloc_arenas'] != ''  -%>
 Environment="MALLOC_CONF=narenas:<%= scope['hhvm::malloc_arenas'] %>"
 <%- end -%>
+
+# For T107128
+Environment=LANG=C.UTF-8
+
 EnvironmentFile=
 EnvironmentFile=/etc/default/hhvm
 ExecStart=
