Phabricator: Redirect all http traffic to https
Reason why I'm doing this is because in labs you can go to http or https.
Using http can cause issues like T165643 .

This will also safe guard phabricator.wikimedia.org too just in case a
http request is not transferred to https.

Bug: T165643
Change-Id: I0e513b209b11afde58a1c9b3f6744445dae77159

--- a/modules/phabricator/templates/phabricator-default.conf.erb
+++ b/modules/phabricator/templates/phabricator-default.conf.erb
@@ -50,6 +50,10 @@
   CustomLog /var/log/apache2/phabricator_access.log wmf
   ServerSignature Off
 
+
+  RewriteCond %{HTTP:X-Forwarded-Proto} !https
+  RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
 <% if !@serveraliases.empty? -%>
 <%- @serveraliases.each do |name| -%>
   # Redirect server alias home to the main server name
