--- a/modules/gerrit/templates/gerrit.wikimedia.org.erb
+++ b/modules/gerrit/templates/gerrit.wikimedia.org.erb
@@ -11,6 +11,9 @@ MaxClients 50
 <VirtualHost *:80>
     ServerAdmin noc@wikimedia.org
     ServerName <%= @host %>
+    <%- if @slave_hosts -%>
+    ServerAlias <%= Array(@slave_hosts).join(' ') %>
+    <%- end -%>
 
     DocumentRoot /var/www
     <Directory />
@@ -40,6 +43,10 @@ MaxClients 50
 <VirtualHost *:443>
     ServerAdmin noc@wikimedia.org
     ServerName <%= @host %>
+    <%- if @slave_hosts -%>
+    ServerAlias <%= Array(@slave_hosts).join(' ') %>
+    <%- end -%>
+
     # https://httpoxy.org/
     RequestHeader unset Proxy early
 
