Update hadoop fair scheduler queues
We currently have
 - 'essential' -- running camus jobs
 - 'oozie' -- never used (production is used instead, removed)
 - 'production' -- running oozie jobs
 - 'priority' -- for user jobs that needs to ga fast
                 (almost never used)
 - 'default' -- for regular user jobs

This patch removes the unusued 'oozie' queue and adds a 'nice' one,
for big/long jobs that can run a bit slower and keep user jobs faster.

Bug: T156841
Change-Id: Ic18c7fcf783a922f48027519617d0e0cb49152e9

--- a/modules/role/templates/analytics_cluster/hadoop/fair-scheduler.xml.erb
+++ b/modules/role/templates/analytics_cluster/hadoop/fair-scheduler.xml.erb
@@ -1,21 +1,22 @@
 <?xml version="1.0"?>
 <allocations>
 
-  <queue name="default">
+  <queue name="nice">
+    <!--
+    The nice queue is for big long running jobs that don't need to finish
+    fast. Having this queue helps smaller requests to finish faster.
+     -->
     <weight>1.0</weight>
     <maxRunningApps>50</maxRunningApps>
     <schedulingMode>fair</schedulingMode>
   </queue>
 
-  <queue name="oozie">
-    <!--
-    The oozie queue is for oozie:launcher jobs.  These jobs
-    run only one task, and don't need many resources.
-    Trying out DRF queue for this.
-     -->
-    <weight>1.0</weight>
+
+
+  <queue name="default">
+    <weight>2.0</weight>
     <maxRunningApps>50</maxRunningApps>
-    <schedulingMode>drf</schedulingMode>
+    <schedulingMode>fair</schedulingMode>
   </queue>
 
   <queue name="priority">
@@ -23,7 +24,7 @@
     The priority queue is for non-adhoc jobs that should get some priority.
     This queue has a higher weight than default, but will never preempt.
      -->
-    <weight>5.0</weight>
+    <weight>10.0</weight>
     <maxRunningApps>50</maxRunningApps>
     <schedulingMode>fair</schedulingMode>
   </queue>
@@ -37,7 +38,7 @@
     and it will start killing (preempting) jobs in other queues
     if it can't get its minimum share within 10 minutes.
      -->
-    <weight>5.0</weight>
+    <weight>10.0</weight>
     <minSharePreemptionTimeout>600</minSharePreemptionTimeout>
     <maxRunningApps>50</maxRunningApps>
   </queue>
@@ -57,7 +58,7 @@
     first after 60 seconds if it can't get its minimum share,
     and then more after 10 minutes if it can't get its fair share.
      -->
-    <weight>10.0</weight>
+    <weight>20.0</weight>
     <minSharePreemptionTimeout>60</minSharePreemptionTimeout>
     <fairSharePreemptionThreshold>600</fairSharePreemptionThreshold>
     <maxRunningApps>50</maxRunningApps>
