--- a/modules/varnish/templates/vcl/wikimedia-common.inc.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-common.inc.vcl.erb
@@ -383,15 +383,10 @@ sub wm_common_backend_response {
 		set beresp.ttl = 10m;
 	}
 
-	// Set keep, which influences the amount of time objects are kept available
-	// in cache for IMS requests (TTL+grace+keep). Scale keep to the app-provided
-	// TTL.
+	// For valid positive-TTL objects:
 	if (beresp.ttl > 0s) {
-		if (beresp.ttl < <%= @vcl_config.fetch("keep", "7d") %>) {
-			set beresp.keep = beresp.ttl;
-		} else {
-			set beresp.keep = <%= @vcl_config.fetch("keep", "7d") %>;
-		}
+		// Set fixed keep values (def 7d) regardless of TTLs
+		set beresp.keep = <%= @vcl_config.fetch("keep", "7d") %>;
 
 		// Hard TTL cap on all fetched objects (default 1d)
 		if (beresp.ttl > <%= @vcl_config.fetch("ttl_cap", "1d") %>) {
