Serve a synth error page when error body is empty in Varnish
Bug: T169683
Change-Id: Ifeab7bc8fd21e1d91935572a05efb0d00f8eab01

--- a/modules/varnish/templates/vcl/wikimedia-backend.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-backend.vcl.erb
@@ -182,6 +182,7 @@ sub vcl_backend_response {
 sub vcl_deliver {
 	call wm_common_deliver_hitcount;
 	call wm_common_xcache_deliver;
+	call wm_common_deliver_error_with_empty_body;
 	call cluster_be_deliver;
 	return (deliver); // no default VCL (which is just "return (deliver)" anyways)
 }
