--- a/modules/varnish/templates/vcl/wikimedia-common.inc.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-common.inc.vcl.erb
@@ -459,3 +459,20 @@ sub wm_common_xcache_deliver {
 		}
 	}
 }
+
+sub wm_common_deliver_error_with_empty_body {
+    // Provides custom error html if error response has no body
+    if (resp.http.Content-Length == "0" && resp.status >= 400) {
+        # Varnish doesn't define status codes from RFC6585
+        if (resp.status == 428) {
+            return(synth(resp.status, "Precondition Required"));
+        } elseif (resp.status == 429) {
+            return(synth(resp.status, "Too Many Requests"));
+        } elseif (resp.status == 431) {
+            return(synth(resp.status, "Request Header Fields Too Large"));
+        } elseif (resp.status == 511) {
+            return(synth(resp.status, "Network Authentication Required"));
+        }
+        return(synth(resp.status));
+    }
+}
