Gerrit: Set auth.userNameToLowerCase
We need to set this since we have made ldap lower case thus the username
has to be converted to lowercase so that the user can use the username
as upper case and lowercase thus fixing a problem a user experienced
today due to the username being upper case but had to use it lowercase
when doing git cloning.

See docs
https://gerrit-review.googlesource.com/Documentation/config-gerrit.html#auth.userNameToLowerCase

Change-Id: I0176d505509118260c963ecffff023f50cc835ad

--- a/modules/gerrit/templates/gerrit.config.erb
+++ b/modules/gerrit/templates/gerrit.config.erb
@@ -1,5 +1,6 @@
 [auth]
     type = LDAP
+    userNameToLowerCase = true
     cookieSecure = true
     registerUrl = https://wikitech.wikimedia.org/w/index.php?title=Special:UserLogin&returnto=Help%3AGetting+Started&type=signup
 [cache]
