--- a/modules/cassandra/templates/cassandra.yaml-2.1.erb
+++ b/modules/cassandra/templates/cassandra.yaml-2.1.erb
@@ -266,11 +266,17 @@ seed_provider:
           # Ex: "<ip1>,<ip2>,<ip3>"
           # Omit own host name / IP in multi-node clusters (see
           # https://phabricator.wikimedia.org/T91617).
+          # Also disregard the main DNS interfaces of each node when
+          # multiple instances are colocated on the same node (see
+          # https://phabricator.wikimedia.org/T172610)
           <% clean_seeds = @seeds.length > 1 ? @seeds.select { |x|
                                                       x != @hostname \
                                                       && ! (x.start_with? "#{@hostname}-") \
                                                       && x != @ipaddress \
-                                                      && x != @fqdn
+                                                      && x != @fqdn \
+                                                      && (/^.+-[a-z]\.(?:eqiad|codfw)\.wmnet$/ =~ x \
+                                                        || @instance_count == 1 \
+                                                        || /^\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$/ =~ x)
                                                   }.join(',') : @seeds.join(',') %>
          - seeds: <%= clean_seeds %>
 # For workloads with more data than can fit in memory, Cassandra's
