--- a/modules/role/templates/labs/puppetmaster/extra_auth_rules.conf.erb
+++ b/modules/role/templates/labs/puppetmaster/extra_auth_rules.conf.erb
@@ -2,3 +2,8 @@
 path /resource_type
 auth any
 allow <%= @horizon_host %>
+
+# This should come from scope.function_hiera(['puppetmaster::servers']).values.flatten(1).map
+# but I absolutely can't make erb work properly
+allow labpuppetmaster1001.wikimedia.org
+allow labpuppetmaster1002.wikimedia.org
