wdqs - send logs to logstash
Move all logging configuration to Puppet, with appropriate entries to send
logs to logstash.

The logstash config of wdqs::gui has been reworked to remove some duplication.

Bug: T172710
Change-Id: Ia33bea9e7b95e9b02c5c465b284b12c26126e8c2

--- a/modules/wdqs/templates/nginx.erb
+++ b/modules/wdqs/templates/nginx.erb
@@ -104,8 +104,8 @@ server {
             deny all;
         }
 
-<% if @log_aggregator -%>
-        access_log syslog:server=<%= @log_aggregator %>,facility=local7,tag=wdqs,severity=info logstash;
+<% if @logstash_host -%>
+        access_log syslog:server=<%= @logstash_host %>:<%= @logstash_syslog_port %>,facility=local7,tag=wdqs,severity=info logstash;
 <% end -%>
     }
 }
