wdqs - send logs to logstash
Add logstash varaibles to wdqs config files. The actual logging configuration
is part of the wdqs package as deployed with scap3.

Bug: T172710
Change-Id: Ia33bea9e7b95e9b02c5c465b284b12c26126e8c2

--- a/modules/wdqs/templates/blazegraph-default.erb
+++ b/modules/wdqs/templates/blazegraph-default.erb
@@ -1,2 +1,4 @@
 HEAP_SIZE="<%= @blazegraph_heap_size %>"
 BLAZEGRAPH_OPTS="<%= @blazegraph_options %>"
+LOGSTASH_HOST="<%= @logstash_host %>"
+LOGSTASH_PORT="<%= @logstash_json_tcp_port %>"
