Add 5 second "greet pause" delay to lists.wikimedia.org SMTP
Insert a 5 second delay before sending SMTP banner.  If (poorly
written/spammy) client speaks before the banner the connection is
closed and synchronization error logged.

Bug: T173143
Change-Id: I3b0369899b3c919331f35de2f8b9401388e9d8ad

--- a/modules/profile/templates/exim/exim4.conf.mailman.erb
+++ b/modules/profile/templates/exim/exim4.conf.mailman.erb
@@ -128,7 +128,11 @@ acl_check_rcpt:
 	accept
 
 acl_check_connect:
+	# Insert a 5 second delay before sending SMTP banner.  If (poorly
+	# written/spammy) client speaks before the banner the connection is
+	# closed and synchronization error logged.
 	accept
+		delay = 5s
 
 acl_check_data:
 	# Let's trust local senders to not send out spam
