cassandra: future parser and Puppet 4 compatibility
The cassandra module relies on inherited scope for its templates, which is
not supported in Puppet 4. All parameters are now passed explicitely to
cassandra::instance. The logic to switch between single instance and
multi-instance is moved to the main cassandra class, since it makes more
sense with explicit parameter passing.

Bug: T171704
Change-Id: Ic586192a7a2e023115011af6ddad45ddd766581e

--- a/modules/cassandra/templates/cassandra-env.sh-3.x.erb
+++ b/modules/cassandra/templates/cassandra-env.sh-3.x.erb
@@ -241,7 +241,7 @@ fi
 # Specifies the default port over which Cassandra will be available for
 # JMX connections.
 # For security reasons, you should not expose this port to the internet.  Firewall it if needed.
-JMX_PORT="<%= @jmx_port %>"
+JMX_PORT="<%= @instance_jmx_port %>"
 
 if [ "$LOCAL_JMX" = "yes" ]; then
   JVM_OPTS="$JVM_OPTS -Dcassandra.jmx.local.port=$JMX_PORT"
