--- a/modules/cassandra/templates/cassandra-env.sh-2.2.erb
+++ b/modules/cassandra/templates/cassandra-env.sh-2.2.erb
@@ -168,7 +168,7 @@ fi
 # Specifies the default port over which Cassandra will be available for
 # JMX connections.
 # For security reasons, you should not expose this port to the internet.  Firewall it if needed.
-JMX_PORT="<%= @jmx_port %>"
+JMX_PORT="<%= @instance_jmx_port %>"
 
 
 # Here we create the arguments that will get passed to the jvm when
