cassandra - puppet 4 compatibility
The cassandra module relies on inherited scope for its templates, which is
not supported in puppet 4. All parameters are now passed explicitely to
cassandra::instance. The logic to switch between single instance and
multi-instance is moved to the main cassandra class, since it makes more
sense with explicit parameter passing.

Bug: T171704
Change-Id: Ic586192a7a2e023115011af6ddad45ddd766581e

--- a/modules/cassandra/templates/cassandra-env.sh-2.1.erb
+++ b/modules/cassandra/templates/cassandra-env.sh-2.1.erb
@@ -167,7 +167,7 @@ fi
 
 # Specifies the default port over which Cassandra will be available for
 # JMX connections.
-JMX_PORT="<%= @jmx_port %>"
+JMX_PORT="<%= @actual_jmx_port %>"
 
 
 # Here we create the arguments that will get passed to the jvm when
