--- a/modules/cassandra/templates/instance.yaml.erb
+++ b/modules/cassandra/templates/instance.yaml.erb
@@ -1,8 +1,8 @@
 name: <%= @instance_name %>
-jmx_port: <%= @jmx_port %>
+jmx_port: <%= @actual_jmx_port %>
 listen_address: <%= @listen_address %>
 service_name: <%= @service_name %>
 config_directory: <%= @config_directory %>
-data_file_directories: [<%= Array(@data_file_directories).join(',') %>]
-rpc_address: <%= @rpc_address %>
+data_file_directories: [<%= Array(@actual_data_file_directories).join(',') %>]
+rpc_address: <%= @actual_rpc_address %>
 native_transport_port: <%= @native_transport_port %>
