--- a/modules/confluent/templates/kafka/server.properties.erb
+++ b/modules/confluent/templates/kafka/server.properties.erb
@@ -31,6 +31,11 @@ inter.broker.protocol.version=<%= @inter_broker_protocol_version %>
 log.message.format.version=<%= @log_message_format_version %>
 
 <% end -%>
+<% if @message_max_bytes -%>
+message.max.bytes=<%= @message_max_bytes %>
+replica.fetch.max.bytes=<%= @message_max_bytes %>
+<% end -%>
+
 ######################### Socket Server Settings ########################
 <% if @security_inter_broker_protocol -%>
 security.inter.broker.protocol=<%= @security_inter_broker_protocol %>
