Increase max kafka message size for changeprop and kafka main
Some of the jobs in the JobQueue exceed the default 1M
size for kafka brokers, so we need to increase that for
the main cluster.

However, the consumer's settings should be in sync with
the broker setting, so we need to pass that value to CP,
so we need to pull it from hiera in both places.

The hiera usage is not optimal but several FIXME
are placed to remind a refactor when moving to profiles.

Change-Id: Ice77027db74e67c519ce305e99ea22c3ff2c7b07

--- a/modules/confluent/templates/kafka/server.properties.erb
+++ b/modules/confluent/templates/kafka/server.properties.erb
@@ -31,6 +31,15 @@ inter.broker.protocol.version=<%= @inter_broker_protocol_version %>
 log.message.format.version=<%= @log_message_format_version %>
 
 <% end -%>
+<% if @message_max_bytes -%>
+message.max.bytes=<%= @message_max_bytes %>
+replica.fetch.max.bytes=<%= @message_max_bytes %>
+<% else -%>
+<% if @replica_fetch_max_bytes -%>
+replica.fetch.max.bytes=<%= @replica_fetch_max_bytes %>
+<% end -%>
+<% end -%>
+
 ######################### Socket Server Settings ########################
 <% if @security_inter_broker_protocol -%>
 security.inter.broker.protocol=<%= @security_inter_broker_protocol %>
@@ -151,12 +160,6 @@ replica.socket.receive.buffer.bytes=<%= @replica_socket_receive_buffer_bytes %>
 # to catch up on messages to get back into the ISR.
 num.replica.fetchers=<%= @num_replica_fetchers %>
 
-<% if @replica_fetch_max_bytes -%>
-# The number of byes of messages to attempt to fetch for each partition in the
-# fetch requests the replicas send to the leader.
-replica.fetch.max.bytes=<%= @replica_fetch_max_bytes %>
-
-<% end -%>
 <% if @log_flush_interval_messages or @log_flush_interval_ms -%>
 ############################# Log Flush Policy #############################
 
