--- a/modules/webperf/templates/navtiming.systemd.erb
+++ b/modules/webperf/templates/navtiming.systemd.erb
@@ -4,9 +4,9 @@ After=network-online.target
 
 [Service]
 WorkingDirectory=/srv/webperf
-Environment="PYTHONPATH=<%= @eventlogging_path %>"
 ExecStart=/usr/bin/python /srv/webperf/navtiming.py \
-    <%= @endpoint %> \
+    --brokers <%= @kafka_brokers %> \
+    --consumer-group navtiming \
     --statsd-host <%= @statsd_host %> \
     --statsd-port <%= @statsd_port %>
 User=nobody
